# statspi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: github-actions-build.yml  rust.yml
src/: bus.rs  citizen.rs  list.rs  main.rs  terminal.rs
