[package]
name = "statspi"
version = "0.2.0"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atspi = { git = "https://github.com/odilia-app/atspi.git", default-features = false, features = ["tokio", "proxies", "connection"]  }
futures-lite = "1.13.0"
tokio = { version = "1.29.1", features = ["full", "time"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
zbus = { version = "3.14.1", features = ["tokio"] }
crossterm = "0.26.1"
ratatui = "0.22.0"
float-pretty-print = "0.1.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
target-cpu = "native"

[profile.dev]   
lto = false
opt-level = 0

