[package]
name = "statspi"
version = "0.2.0"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atspi = { version = "0.20.0", default-features  = false, features = ["tokio","proxies","connection"] }
console-subscriber = "0.2.0"
crossterm = "0.27"
float-pretty-print = "0.1.1"
futures-lite = "2.1.0"
once_cell = "1.19.0"
ratatui = "0.24.0"
tokio = { version = "1.35.0", default-features=false, features = ["rt", "rt-multi-thread", "tokio-macros", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
zbus = { version = "3.14.1", features = ["tokio"] }
